--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@heroicons/vue": "^2.1.3",
     "@pinia/nuxt": "^0.5.1",
     "@types/mongoose": "^5.11.97",
+    "chart.js": "^4.4.3",
     "mongoose": "^8.3.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
