--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.3",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.1",
-    "@types/mongoose": "^5.11.97",
+    "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.3",
-    "mongoose": "^8.3.2",
+    "flowbite": "^2.5.1",
+    "mysql2": "^3.11.0",
     "nuxt": "^3.11.2",
+    "pg-hstore": "^2.3.4",
+    "postcss": "^8.4.41",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
+    "tailwindcss": "^3.4.9",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-bg-patterns": "^0.3.0"
+    "prettier": "3.3.3"
   }
 }
